# cmake_ninja_build_simple_app

./: CMakeLists.txt  README.md  README.md.bak
hello/: hello.c
